--- a/index.html
+++ b/index.html
@@ -18,8 +18,17 @@ background-color: aqua;
   body {
     background-color: yellow;
   }
+  p, img{width: 100%}
+  
 }
 
+ @media only screen and (min-width: 600px) {
+  p {width: 600px}
+  
+   img{width: 800px}
+  
+}
+  
 /* Responsive Design Additions */
 
 /*your CSS will go here*/
