responsive text size

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ background-color: aqua;
 @media only screen and (max-width: 600px) {
   body {
     background-color: yellow;
+    font-size: 0.75em
   }
   p, img{width: 100%}
   
